fix contrast errors

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -42,7 +42,7 @@ $repeat: 4
     height: auto
   @include respond-to('medium')
     height: 89vh
-    p  
+     
 .avatar
   position: absolute
   bottom: 0
